<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/app_numero1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtDos"
        tools:layout_editor_absoluteX="94dp" />

    <Button
        android:id="@+id/btnMas"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:text="@string/app_mas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDos"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/btnMenos"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:text="@string/app_menos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnMas"
        app:layout_constraintTop_toBottomOf="@+id/txtDos"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/txtDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_numero2"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="197dp" />

    <Button
        android:id="@+id/btnPor"
        android:layout_width="64dp"
        android:layout_height="49dp"
        android:text="@string/app_por"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toEndOf="@+id/btnMenos"
        app:layout_constraintTop_toBottomOf="@+id/txtDos"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:text="@string/app_entre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/btnPor"
        app:layout_constraintTop_toBottomOf="@+id/txtDos"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_basicas"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtUno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMas"
        app:layout_constraintVertical_bias="0.264" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/btnMenos"
        app:layout_constraintVertical_bias="0.169" />

</androidx.constraintlayout.widget.ConstraintLayout>